# osu-cs340-project

./: .env-example  .gitignore  DDL.sql  DML.sql  DML2.sql  Makefile  README.md  pyproject.toml  scratch.sql  sql_app.db  sratch.sql
docker/: docker-compose.yml
docker/init_sql/: DDL.sql
docs/: model.mwb  schema.mwb
tests/client/: test_bulk_client.py
tests/processor/: test_processor.py
what_the_fec/: dependencies.py  logging.py  main.py
what_the_fec/api/: candidate_office_records.py  columns_information.py  election_years.py  home.py
what_the_fec/client/: bulk_client.py
what_the_fec/processor/: processor.py
what_the_fec/routes/: election_years.py  helpers.py  route.py
what_the_fec/routes/amendment_indicators/: endpoint_funcs.py  routes.py
what_the_fec/routes/candidate_office_records/: candidate_office_records.py  endpoint_funcs.py  routes.py
what_the_fec/routes/candidate_office_records_committees/: endpoint_funcs.py  routes.py
what_the_fec/routes/candidate_office_records_contributions/: endpoint_funcs.py  routes.py
what_the_fec/routes/candidates/: endpoint_funcs.py  routes.py
what_the_fec/routes/committee_types/: endpoint_funcs.py  routes.py
what_the_fec/routes/committees/: endpoint_funcs.py  routes.py
what_the_fec/routes/common/: tables_information.py
what_the_fec/static/: table_information.py
what_the_fec/storage/: config.py  db.py
what_the_fec/templates/: base.j2  candidate_office_records.j2  delete_candidate_office_records.j2  edit_candidate_office_records.j2  error.j2  home.j2  intersection_tables.j2  tables.j2
(+52 files in other folders)
