[tool.poetry]
name = "what-the-fec"
version = "0.1.0"
description = ""
authors = ["nolandseigler <57370691+nolandseigler@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "what_the_fec"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.9"
pymysql = "^1.0.3"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
gunicorn = "^20.1.0"
urllib3 = "^1.26.15"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
